src/styles/movimentos.css
.table-div{
    margin-top: 10px;
    border: 1px solid rgba(0, 0, 0, 0.343);
    width: 100%;
    height: 100%;
    user-select: none;
}
#main-table{
    width: 100%;
}
.table-header{

}
.table-th{
    border: 1px solid black;
}



.bg-div-adder{
    z-index: 90;
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(128, 127, 127, 0.339);
}

.adder-div{
    position: fixed;
    top: 40%;
    width: 100%;
    box-shadow: 0px 0px 0px white;
    min-height: 150px;
    background-color: rgba(0, 0, 0, 0.386);
    backdrop-filter: blur(20px);
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 100;
    box-shadow: 0px -1px 2px rgba(171, 172, 198, 0.432);
    border-bottom: 1px solid rgba(0, 0, 0, 0.242);
}

.adder-upper{
    position: absolute;
    width: 100%;
    cursor: grab;
    height: 20px;
    background-color: rgba(168, 168, 172, 0.191);
    display: flex;
    justify-content: end;
    align-items: center;
}
.adder-head-close{
    user-select: none;
    color: rgba(0, 0, 0, 0.631);
    padding: 0 10px;
    height: 100%;
    font-size: 1.2rem;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    background: rgba(218, 91, 60, 0.322);
    cursor: pointer;
}
.adder-head-close:hover{
    background: rgba(201, 44, 4, 0.467);
    color: rgba(0, 0, 0, 0.881);
}
.adder-upper:active{
    cursor: grabbing;

}
.adder-header{
    display: flex;
    justify-content:space-evenly;
    margin-top: 25px;
    width: 100%;
    font-size: 1.2rem;
    font-family: Arial, Helvetica, sans-serif;
    text-shadow: 0px 1px 7px rgb(127, 126, 203, 0.8);
    user-select: none;
}

.adder-header-td{
    color: white;
    width: 100%;
    text-align: center;
    min-width: 105px;
    padding: 3px 0px;
    border-right: 2px solid rgba(188, 188, 199, 0.202);
}

.adder-header-row-div{
    width: 100%;
}
.adder-row{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    border: 1px solid white;

}
.adder-row input{
    text-align: center;
    font-size: 1.2rem;
    outline: none;
    border:  1px solid rgba(188, 188, 199, 0.802);

}
.adder-row input::placeholder{
    color: rgba(54, 51, 51, 0.311);
    user-select: none;
}
.adder-td{
    min-width: 80px;
    height: 30px;

}

.adder-date-div{
    display: flex;
    background-color: white;

}

.adder-date-input{
    width: calc(100% / 3);


}

.adder-date-input:nth-child(1){
    border-right: none;
}
.adder-date-input:nth-child(3){
    border-left: none;
    border-right: none;
}
.adder-date-input:nth-child(5){
    border-left: none;
}
.adder-date-divider{
    user-select: none;
    height: 100%;
    font-size: 1.8rem;
    border-top: 1px solid rgba(6, 18, 245, 0.302);
    border-bottom: 1px solid rgba(6, 18, 245, 0.302);

}


.adder-desig-div{

    display: flex;
    z-index: 10000;
}
.adder-desig-div input{
    outline: none;
    font-size: 1.2rem;
    transition: font-size 0.1s linear;

}

.adder-desig-input{

    outline: none;
     border: none;

}

.adder-desig-input-num{
    border: none;
    outline: none;

}
.adder-header-btn-div{
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-items:center;
}

.new-row-arrow{
    grid-column: 2 / 3;
    width: 60px;
    filter:blur(1px) drop-shadow(0px 2px 3px rgba(12, 212, 215, 0.359));
    cursor: pointer;
    -webkit-user-drag: none;
}

.new-row-arrow:hover{
    transform: scale(1.05);
    filter:blur(1px) drop-shadow(0px 2px 6px rgb(12, 211, 215, 0.6));
}
.new-row-arrow:active{
    transform: scale(1);
    filter:blur(1px) drop-shadow(0px 0px 1px rgb(2, 131, 133, 0.4));
}


.add-to-table-btn{
    justify-self: end;
    align-self: flex-end;
    grid-column: 3 / 4;
    border: 1px solid rgba(255, 255, 255, 0.206);
    padding: 5px 20px;
    font-family: "amiri";
    color: rgba(208, 222, 211, 0.881);
    letter-spacing: 0.05rem;
    background-color: rgba(255, 255, 255, 0.195);
    user-select: none;
    cursor: pointer;
    border-radius: 20px 0px 0px 20px;
    border-right: none;
    font-size: 1rem;
    transition: font-size 0.1s ease-in-out;
    text-shadow: 0px 1px 8px rgba(0, 0, 0, 0.626);
}

.add-to-table-btn:hover{
    animation: addTableAnim infinite 2s linear;
    font-size: 1.1rem;
}
.add-to-table-btn:active{
    font-size: 1rem;
}

@keyframes addTableAnim {
    0%{ box-shadow: 0px 0px 1px white; background-color: rgba(255, 255, 255, 0.195);}
    50%{ box-shadow: 0px 0px 8px rgb(20, 145, 198); background-color: rgba(255, 255, 255, 0.175)}
    100%{ box-shadow: 0px 0px 0px white; background-color: rgba(255, 255, 255, 0.168)}
}

#add-movimento-btn{
    cursor: pointer;
    width:  clamp(10%, 8%, 12%);
    color: rgba(183, 179, 179, 0.418);
    height: 35px;
    font-family: cinzel;
    border-radius: 100px;
    outline: none;
    border: none;
    background: none;
    font-size: 2.9rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(2, 11, 15, 0.289);
    box-shadow: 0px 1px 14px rgba(255, 255, 255, 0.097);
    user-select: none;

}
#add-movimento-btn:hover{
    box-shadow: 0px 1px 20px rgba(255, 255, 255, 0.197);
    background-color: rgba(2, 11, 15, 0.349);



}
#add-movimento-btn:active{
    box-shadow: 0px 0px 3px rgba(255, 255, 255, 0.297);
}

